--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -1,7 +1,7 @@
 name: OpenShift 
 
 env: 
-  IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
+  IMAGE_REGISTRY: ghcr.io/shahinmahmody #quick and dirty hardcoding because docker disallows uppercase letters 
   REGISTRY_USER: ${{ github.actor }}
   REGISTRY_PASSWORD: ${{ github.token }}
   APP_NAME: nationalparks
